--- a/01-clases/app/src/main/AndroidManifest.xml
+++ b/01-clases/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.2024ASWGR2SGPV"
         tools:targetApi="31">
         <activity
+            android:name=".ECrudEntrenador"
+            android:exported="false" />
+        <activity
             android:name=".CIntentExplicitoParametros"
             android:exported="false" />
         <activity
