--- a/01-clases/app/build.gradle
+++ b/01-clases/app/build.gradle
@@ -40,6 +40,9 @@ android {
 
 dependencies {
 
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.google.firebase:firebase-auth:23.0.0'
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
